tests/compile-fail/not_integer.stderr
error: only integer literals are allowed
  --> tests/compile-fail/not_integer.rs:10:5
   |
10 |     B = "6",
   |     ^

error[E0308]: mismatched types
  --> tests/compile-fail/not_integer.rs:10:9
   |
10 |     B = "6",
   |         ^^^ expected `i8`, found `&str`
